# ethrpc-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: abi.rs  api.rs  decode.rs  error.rs  evaluator.rs  jsonrpc.rs  lib.rs  rpc.rs
src/chains/: chains_data.json  mod.rs
tests/: integration.rs
tests/common/: mod.rs
